<resources>
    <string name="app_name">MVVM Boilerplate</string>

    <!--    Errors-->
    <string name="no_internet">Please Check your internet connection!</string>
    <string name="network_error">Try again later!</string>
    <string name="loading">Loading...</string>
    <string name="pokemon_image">PokemonImage</string>
    <string name="id">ID</string>
    <string name="name">NAME</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="type">TYPE</string>

</resources>